apps/apm/oc-apm-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app: oc-apm
    openshift.io/host.generated: "true"
  labels:
    app: oc-apm
    type: operations
  name: oc-apm
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: oc-apm
    weight: 100
  wildcardPolicy: None
